# kodo

./: .gitignore  CLAUDE.md  README.md  hatch_build.py  pyproject.toml
doc/: ADDING_A_SUBAGENT.md  CHECKPOINTS.md  DESIGN.md  GUIDE_PROMPT_REVIEW.md  INTERNALS.md  LLM_GATEWAY.md  LLM_REGISTRY.md  LOCAL_INFERENCE.md  LOCAL_MODEL_MANAGER.md  PLAN.md  READ_WEBPAGE.md  REQUIREMENTS.md  SECURITY.md  SECURITY_RULES_GUIDE.md  SECURITY_RULES_PLAN.md  SESSIONS.md  SETTINGS.md  STATE_AND_LIFECYCLE.md  STUCK_DETECTION.md  TOOLS.md  VALIDATOR.md  WEB_SEARCH.md  WS_PROTOCOL.md
schemas/: publish_artifact.json  read_artifact.json
scripts/: check_version.py  post_build.py  pre_build.py
src/kodo/: CLAUDE.md  __init__.py  __main__.py
src/kodo/agents/: 01_narrative_author.claude-sonnet-4-6.md  02_architect.claude-sonnet-4-6.md  03_architect_critic.claude-sonnet-4-6.md  04_requirements_author.claude-sonnet-4-6.md  05_requirements_critic.claude-sonnet-4-6.md  06_functional_designer.claude-sonnet-4-6.md  07_functional_design_critic.claude-sonnet-4-6.md  08_test_designer.claude-sonnet-4-6.md  09_test_coder.claude-sonnet-4-6.md  10_coder.claude-sonnet-4-6.md  11_code_reviewer.claude-sonnet-4-6.md  __init__.py  _loader.py  _registry.py  architect.claude-sonnet-4-6.md  architect_critic.claude-sonnet-4-6.md  code_reviewer.claude-sonnet-4-6.md  coder.claude-sonnet-4-6.md  critic_stub.claude-sonnet-4-6.md  dev_proxy.claude-haiku-4-5-20251001.md  functional_design_critic.claude-sonnet-4-6.md  functional_designer.claude-sonnet-4-6.md  narrative_author.claude-sonnet-4-6.md  requirements_author.claude-sonnet-4-6.md  requirements_reviewer.claude-sonnet-4-6.md  test_coder.claude-sonnet-4-6.md  test_design_critic.claude-sonnet-4-6.md  test_designer.claude-sonnet-4-6.md
src/kodo/binutils/: __init__.py  _utils.py
src/kodo/common/: __init__.py  _envelope.py  _protocols.py  _tempdir.py
src/kodo/guided_state/: __init__.py  _paths.py  _records.py  _scan.py  _store.py
src/kodo/llm_utils/: __init__.py  _downloader.py  _installer.py  _llama_server.py  _registry.py
src/kodo/llms/: __init__.py  _cloud_registry.py  _context.py  _gateway.py  _hardware.py  _interface.py  _llm_interface.py  _local_registry.py  _logger.py  _mcp.py  _registry.py  _sanitize.py  _tool_logger.py
src/kodo/mcp/: __init__.py  _declaration.py  _interface.py  _registry.py
src/kodo/mirror/: __init__.py  _checkpoints.py  _mirror.py  _promoter.py  _repo.py
src/kodo/project/: __init__.py  _layout.py  _manifest.py
src/kodo/runtime/: __init__.py  _attachments.py  _bootstrap.py  _checkpoints.py  _cyclic_thinking.py  _engine.py  _gates.py  _guide.py  _index.py  _orchestrator.py  _rollback.py  _security_rules.py  _session.py  _session_log.py  _subagent_dispatch.py  _tool_surface.py
src/kodo/security/: __init__.py  _analysis.py  _classify.py  _defaults.py  _judge.py  _layer.py  _rules.py  _store.py
src/kodo/server/: __init__.py  __main__.py  _app.py  _config.py  _connection_registry.py  _key_broker.py  _lifecycle.py  _models.py  _orchestrator.py  _response.py  _session.py  _session_manager.py  _worker.py
src/kodo/shellparser/: __init__.py  _parser.py  _powershell.py
src/kodo/state/: __init__.py  _memory.py  _toolcall_store.py  _transient.py
src/kodo/subagents/: __init__.py  _loader.py  _registry.py  _subagentspec.py  agent_guide.md  agent_judge.md  agent_problem_solver.md  base_dependencies.md  base_toolchain.md  preamble.md  preamble_performance.md  preamble_security.md  subagent_architect.md  subagent_architect_critic.md  subagent_code_critic.md  subagent_coder.md  subagent_compactor.md  subagent_developer.md  subagent_document_writer.md  subagent_e2e_test_code_critic.md  subagent_e2e_test_coder.md  subagent_e2e_test_design_critic.md  subagent_e2e_test_designer.md  subagent_functional_design_critic.md  subagent_functional_designer.md  subagent_guide.md  subagent_investigator.md  subagent_narrative_author.md  subagent_orchestrator.md  subagent_planner.md  subagent_problem_solver.md  subagent_python_toolchain.md  subagent_requirements_author.md  subagent_requirements_critic.md  subagent_session_titler.md  subagent_test_coder.md  subagent_test_design_critic.md  subagent_test_designer.md  subagent_toolchain_cpp.md  subagent_toolchain_depsmgr.md  (+5 more)
src/kodo/titling/: __init__.py  __main__.py  _server.py  _summarizer.py
src/kodo/toolchains/: __init__.py  _interface.py  _select.py
src/kodo/tools/: __init__.py  _ask_user.py  _context.py  _copy_file.py  _create_directory.py  _create_file.py  _create_new_project.py  _delete_file.py  _disable_autonomous_mode.py  _dispatch.py  _document_feedback.py  _edit_file.py  _edit_review.py  _escalate_blocker.py  _filesystem.py  _finalize_project.py  _find_files.py  _find_text_in_files.py  _get_root_paths.py  _get_web_search_state.py  _guided_dev_status.py  _init_project.py  _list_artifacts.py  _move_file.py  _paths.py  _post_update.py  _publish_artifact.py  _query_frontier.py  _query_search_engine.py  _read_artifact.py  _read_attachment.py  _read_file.py  _read_webpage.py  _remaining_time.py  _report_artifact_completed.py  _report_tools.py  _request_user_review_artifact.py  _return_result.py  (+14 more)
test/: test_agents.py  test_attachments.py  test_bootstrap.py  test_browser_session.py  test_cache.py  test_checkpoint_state.py  test_checkpoints.py  test_common_tempdir.py  test_completion_integration.py  test_component_registry.py  test_config.py  test_connection.py  test_connection_registry.py  test_create_new_project.py  test_cyclic_thinking.py  test_edit_review.py  test_engine_checkpointing.py  test_engine_compaction.py  test_engine_core.py  test_engine_document_flow.py  test_engine_history.py  test_engine_llm.py  test_engine_resume.py  test_engine_shared_events.py  test_engine_stop.py  test_engine_subagents.py  test_engine_titling.py  test_engine_turns.py  test_engine_watchdog.py  test_engine_worker.py  test_fileio_server.py  test_gates.py  test_guided_state.py  test_key_broker.py  test_kodo.py  test_lifecycle.py  test_llama_server.py  test_llm_flavors.py  test_llm_gateway.py  test_llms_local.py  (+40 more)
(+190 files in other folders)
