[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kodo"
version = "0.1.0b1"
description = "Kōdo (コード) — an open-source agentic harness"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.0",
    "anthropic>=0.106.0",
    "curl_cffi>=0.15.0",
    "huggingface_hub>=1.18.0",
    "openai>=2.41.0",
    "playwright>=1.61.0",
    "psutil>=7.0.0",
    "nvidia-ml-py>=12.0.0",
    "selectolax>=0.4.10",
    "torch>=2.5.0",
    # transformers 5.x dropped the pipeline() task-name convenience wrappers
    # (including "summarization") outright, and staying on the 4.x series
    # conflicts with this project's huggingface_hub>=1.18.0 pin (needed by
    # kodo.llms.local, doc/LOCAL_MODEL_MANAGER.md) — so kodo.titling calls
    # AutoModelForSeq2SeqLM/AutoTokenizer directly instead of pipeline().
    "transformers>=5.0.0"
]

# The session titler (kodo.titling) runs its summarization model with
# device="cpu" only — it must never contend with llama.cpp for GPU memory —
# so torch is pinned to the CPU-only wheel index instead of the default
# (CUDA-bundled) PyPI build, which is multi-GB larger for a capability this
# project never uses.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
kodo = "kodo.__main__:main"
kodo-server = "kodo.server.__main__:main"
kodo-validator = "kodo.validator.__main__:main"


[tool.hatch.build.targets.wheel]
packages = ["src/kodo"]
include = ["src/kodo/**/*.md"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",
    "ruff>=0.9",
    "mypy>=1.13",
    "aiohttp>=3.14.0",
]

[tool.hatch.envs.default.scripts]
fmt      = "ruff format src test"
lint     = "ruff check src test"
typecheck = "mypy"
test     = "pytest {args}"
check-version = "python scripts/check_version.py"
check    = ["ruff format src test", "ruff check src test --fix", "mypy", "python scripts/check_version.py", "pytest --full-trace"]
build    = ["python scripts/pre_build.py", "ruff format src test", "ruff check src test", "mypy", "python scripts/check_version.py", "pytest", "hatch build", "python scripts/post_build.py"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cov=kodo --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
